force-app/main/default/objects/Region__c/Region__c.object-meta.xml
<CustomObject>
    <description>Operating region used to scope FSG catalog visibility, merchandising queues, and Experience Cloud sharing. Complements Commerce Markets; does not replace them.</description>
    <label>Region</label>
    <nameField>
        <label>Region Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Regions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>