force-app/main/default/objects/Region__c/fields/Commerce_Market_Name__c.field-meta.xml
<CustomField>
    <fullName>Commerce_Market_Name__c</fullName>
    <description>Name of the matching B2B Commerce Market. Automation uses this to keep CRM region aligned with storefront market.</description>
    <label>Commerce Market Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>