force-app/main/default/objects/Region__c/fields/Country_ISO__c.field-meta.xml
<CustomField>
    <fullName>Country_ISO__c</fullName>
    <description>ISO 3166-1 alpha-2 country code when this region is a country. Leave blank for multi-country regions.</description>
    <label>Country ISO</label>
    <length>2</length>
    <type>Text</type>
</CustomField>