force-app/main/default/objects/Region__c/fields/Default_Currency_ISO__c.field-meta.xml
<CustomField>
    <fullName>Default_Currency_ISO__c</fullName>
    <label>Default Currency ISO</label>
    <length>3</length>
    <type>Text</type>
</CustomField>