force-app/main/default/objects/Region__c/fields/Default_Locale__c.field-meta.xml
<CustomField>
    <fullName>Default_Locale__c</fullName>
    <label>Default Locale</label>
    <length>20</length>
    <type>Text</type>
</CustomField>