force-app/main/default/objects/Region__c/fields/Parent_Region__c.field-meta.xml
<CustomField>
    <fullName>Parent_Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional parent region, for example country UK under EMEA.</description>
    <label>Parent Region</label>
    <referenceTo>Region__c</referenceTo>
    <relationshipLabel>Child Regions</relationshipLabel>
    <relationshipName>Child_Regions</relationshipName>
    <type>Lookup</type>
</CustomField>