force-app/main/default/objects/Region__c/fields/Region_Code__c.field-meta.xml
<CustomField>
    <fullName>Region_Code__c</fullName>
    <description>Stable code used in sharing rules, buyer group names, and automation. Example: NA, EMEA, APAC, LATAM, UK, DE.</description>
    <externalId>true</externalId>
    <inlineHelpText>Use a short uppercase code. This value is referenced by sharing rules and custom metadata.</inlineHelpText>
    <label>Region Code</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>