force-app/main/default/objects/Region__c/listViews/Active_Regions.listView-meta.xml
<ListView>
    <fullName>Active_Regions</fullName>
    <columns>NAME</columns>
    <columns>Region_Code__c</columns>
    <columns>Country_ISO__c</columns>
    <columns>Default_Currency_ISO__c</columns>
    <columns>Default_Locale__c</columns>
    <columns>Commerce_Market_Name__c</columns>
    <columns>Is_Active__c</columns>
    <filters>
        <field>Is_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filterScope>Everything</filterScope>
    <label>Active Regions</label>
</ListView>